# serializer version: 1
# name: test_binary_sensor[binary_sensor.ayran_connection_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ayran_connection_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Connection state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connection state',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'connection_state',
    'unique_id': '999011403_00:20220412-443E07022463_connection_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.ayran_connection_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'connectivity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ayran Connection state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ayran_connection_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[binary_sensor.ayran_freezer_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ayran_freezer_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Freezer door',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'Freezer door',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'freezer_door_state',
    'unique_id': '999011403_00:20220412-443E07022463_freezer_door_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.ayran_freezer_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'door',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ayran Freezer door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ayran_freezer_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[binary_sensor.ayran_fridge_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ayran_fridge_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fridge door',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'Fridge door',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fridge_door_state',
    'unique_id': '999011403_00:20220412-443E07022463_fridge_door_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.ayran_fridge_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'door',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ayran Fridge door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ayran_fridge_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[binary_sensor.ayran_ui_lock_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ayran_ui_lock_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'UI lock mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'UI lock mode',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ui_lock_mode',
    'unique_id': '999011403_00:20220412-443E07022463_ui_lock_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.ayran_ui_lock_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ayran UI lock mode',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ayran_ui_lock_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[binary_sensor.ceiling_hood_auto_switch_off_event-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ceiling_hood_auto_switch_off_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auto switch off event',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auto switch off event',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hood_auto_switch_off_event',
    'unique_id': '999008105_00:99010299-443E074B7A6E_hood_auto_switch_off_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.ceiling_hood_auto_switch_off_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ceiling Hood Auto switch off event',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ceiling_hood_auto_switch_off_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[binary_sensor.ceiling_hood_charcoal_filter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ceiling_hood_charcoal_filter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Charcoal filter',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Charcoal filter',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hood_filter_charcoal_enabled',
    'unique_id': '999008105_00:99010299-443E074B7A6E_hood_filter_charcoal_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.ceiling_hood_charcoal_filter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ceiling Hood Charcoal filter',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ceiling_hood_charcoal_filter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[binary_sensor.ceiling_hood_connection_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ceiling_hood_connection_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Connection state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connection state',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'connection_state',
    'unique_id': '999008105_00:99010299-443E074B7A6E_connection_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.ceiling_hood_connection_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'connectivity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ceiling Hood Connection state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ceiling_hood_connection_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[binary_sensor.dryer_connection_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.dryer_connection_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Connection state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connection state',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'connection_state',
    'unique_id': '999120000_00:74852244-443E0704101F_connection_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.dryer_connection_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'connectivity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dryer Connection state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.dryer_connection_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[binary_sensor.dryer_door_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.dryer_door_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Door state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'Door state',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'door_state',
    'unique_id': '999120000_00:74852244-443E0704101F_door_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.dryer_door_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'door',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dryer Door state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.dryer_door_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[binary_sensor.dryer_ui_lock_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.dryer_ui_lock_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'UI lock mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'UI lock mode',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ui_lock_mode',
    'unique_id': '999120000_00:74852244-443E0704101F_ui_lock_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.dryer_ui_lock_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dryer UI lock mode',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.dryer_ui_lock_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[binary_sensor.fenix_connection_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.fenix_connection_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Connection state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connection state',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'connection_state',
    'unique_id': '900412569_00:43319382-443E0748CCD4_connection_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.fenix_connection_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'connectivity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fenix Connection state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.fenix_connection_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[binary_sensor.fenix_door_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.fenix_door_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Door state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'Door state',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'door_state',
    'unique_id': '900412569_00:43319382-443E0748CCD4_door_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.fenix_door_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'door',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fenix Door state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.fenix_door_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[binary_sensor.peacock_hob_connection_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.peacock_hob_connection_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Connection state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connection state',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'connection_state',
    'unique_id': '999008120_00:99907833-443E073D986E_connection_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.peacock_hob_connection_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'connectivity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Peacock hob Connection state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.peacock_hob_connection_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[binary_sensor.peacock_hob_ui_lock_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.peacock_hob_ui_lock_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'UI lock mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'UI lock mode',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ui_lock_mode',
    'unique_id': '999008120_00:99907833-443E073D986E_ui_lock_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.peacock_hob_ui_lock_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Peacock hob UI lock mode',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.peacock_hob_ui_lock_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_binary_sensor[binary_sensor.peacock_hob_zone_1_pot_detected-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.peacock_hob_zone_1_pot_detected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 1 pot detected',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 1 pot detected',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hobzone1_pot_detected',
    'unique_id': '999008120_00:99907833-443E073D986E_hobzone1_pot_detected',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.peacock_hob_zone_1_pot_detected-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Peacock hob Zone 1 pot detected',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.peacock_hob_zone_1_pot_detected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_binary_sensor[binary_sensor.peacock_hob_zone_2_pot_detected-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.peacock_hob_zone_2_pot_detected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 2 pot detected',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 2 pot detected',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hobzone2_pot_detected',
    'unique_id': '999008120_00:99907833-443E073D986E_hobzone2_pot_detected',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.peacock_hob_zone_2_pot_detected-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Peacock hob Zone 2 pot detected',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.peacock_hob_zone_2_pot_detected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_binary_sensor[binary_sensor.peacock_hob_zone_3_pot_detected-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.peacock_hob_zone_3_pot_detected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 3 pot detected',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 3 pot detected',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hobzone3_pot_detected',
    'unique_id': '999008120_00:99907833-443E073D986E_hobzone3_pot_detected',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.peacock_hob_zone_3_pot_detected-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Peacock hob Zone 3 pot detected',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.peacock_hob_zone_3_pot_detected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_binary_sensor[binary_sensor.peacock_hob_zone_4_pot_detected-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.peacock_hob_zone_4_pot_detected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 4 pot detected',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 4 pot detected',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hobzone4_pot_detected',
    'unique_id': '999008120_00:99907833-443E073D986E_hobzone4_pot_detected',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.peacock_hob_zone_4_pot_detected-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Peacock hob Zone 4 pot detected',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.peacock_hob_zone_4_pot_detected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_binary_sensor[binary_sensor.pux_pizza_oven_connection_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.pux_pizza_oven_connection_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Connection state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connection state',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'connection_state',
    'unique_id': '949288049_00:11112225-443E076A37D6_connection_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.pux_pizza_oven_connection_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'connectivity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'PUX pizza oven Connection state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pux_pizza_oven_connection_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[binary_sensor.pux_pizza_oven_door_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.pux_pizza_oven_door_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Door state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'Door state',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'door_state',
    'unique_id': '949288049_00:11112225-443E076A37D6_door_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.pux_pizza_oven_door_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'door',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'PUX pizza oven Door state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pux_pizza_oven_door_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[binary_sensor.supex_oven_connection_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.supex_oven_connection_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Connection state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connection state',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'connection_state',
    'unique_id': '944035064_00:27032025-443E073D97B2_connection_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.supex_oven_connection_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'connectivity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Supex oven Connection state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.supex_oven_connection_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[binary_sensor.supex_oven_upper_door_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.supex_oven_upper_door_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Upper door state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'Upper door state',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'upperoven_door_state',
    'unique_id': '944035064_00:27032025-443E073D97B2_upperoven_door_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.supex_oven_upper_door_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'door',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Supex oven Upper door state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.supex_oven_upper_door_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
